samples/_failures_safe/1761327481_120c6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_75e81f19.c: In function ‘handle_event’:
./samples/SAFE/__tmp_75e81f19.c:150:13: error: expected expression at end of input
  150 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_75e81f19.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_75e81f19.c:150:13: error: expected declaration or statement at end of input
